# cpp-experiments

./: .gitignore  CMakeLists.txt  LICENSE  README.md
projects/: .clang-format  format-src-files.sh
projects/people-manager/: .gitignore  CMakeLists.txt  README.md
projects/people-manager/src/: Person.cpp  Person.hpp  main.cpp
